Closed
Bug 270377
Opened 21 years ago
Closed 21 years ago
nullplugin dialog should only show on left mouse button click
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: v.caron, Assigned: v.caron)
References
Details
Attachments
(1 file)
|
845 bytes,
patch
|
bryner
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.3) Gecko/20041007 Galeon/1.3.18 (Debian package 1.3.18-1.1)
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.3) Gecko/20041007 Galeon/1.3.18 (Debian package 1.3.18-1.1)
The default Mozilla plugin (nullplugin) will pop a dialog (This page [...] can
only be viewed with the appropriate Plug-in) upon release of any mouse button.
Under X11, this has the unwanted effect to be triggered by mouse wheel events:
if one scrolls vertically through a document and an unsupported plugin element
happens to slip under the mouse pointer, the scrolling stops and the spurious
dialog pop.
Attached is a 3-line fix which restricts the popup to Button1 (ie. 'select', aka
left mouse button).
Reproducible: Always
Steps to Reproduce:
1. Try to view a page wich embeds an unsupported plugin
2. Hover the default plugin instance with your mouse pointer and use the mouse wheel
Actual Results:
A modal dialog pops up.
Expected Results:
The dialog should only pop on left mouse button release.
I will attach the patch to this bug, it applies to
.mozilla/modules/plugin/samples/default/unix/nullplugin.c from CVS trunk.
| Assignee | ||
Comment 1•21 years ago
|
||
Comment 2•21 years ago
|
||
Comment on attachment 166222 [details] [diff] [review]
restrict dialog popup to left mouse button release
Brian, does this look ok to you?
Attachment #166222 -
Flags: superreview+
Attachment #166222 -
Flags: review?(bryner)
Comment 3•21 years ago
|
||
*** Bug 271704 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Attachment #166222 -
Flags: review?(bryner) → review+
Updated•21 years ago
|
Assignee: nobody → v.caron
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•21 years ago
|
Summary: nullplugin dialog should only show on left mouse button clic → nullplugin dialog should only show on left mouse button click
Comment 4•21 years ago
|
||
Fix checked in for 1.8b.
Vincent, in general you want to request review for your patches (see
http://www.mozilla.org/hacking/life-cycle.html and
http://www.mozilla.org/owners.html) and when they have reviews it's a good idea
to ping someone to check them in. Keeps them from getting lost. ;)
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•