Make nullplugin dialog not show up on clicks with buttons other than the left mouse button.  Bug 270377, patch by Vincent Caron <v.caron@zerodeux.net>, r=bryner, sr=bzbarsky